--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a:hover {
 }
 
 .form {
-  background: rgba(19, 35, 47, 0.9);
+  background: blue;
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
